# transcriber

./: .env.example  .gitignore  CLAUDE.md  mcp_server.py  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  server.py  vosk_server.py
profiles/: README.md  TEST-RESULTS.md  bug-fix.md  code-review.md  research.md
prompts/: day3-testing-prompt.md
public/: index.html
public/css/: style.css
public/js/: app.js  audio-processor.js  tts.js  voice.js
tests/: SMOKE-SCENARIOS.md  conftest.py  test_js_utils.py  test_mcp_server.py  test_server_routes.py  test_server_utils.py  test_smoke_playwright.py
